при инициализации gps-модема при ожидании подтверждения команд - давать работать другим процессам
логбук - запоминать время взлёта ла

hw (плата)
    нужен конденсатор в цепь контроля напряжения аккумулятора
    посад место под электролит на цепь 3.3в
    диод в цепь между cp2102 и общим 3v3

_________________________________________________________________________________________
=========================================================================================
version 0.4.1 (xx.xx.2021)
------------------------
- режимы питания
-    активный (без сна вообще) - во время подъёма / падения / активном жпс / активной синхронизации
-    пассивный (light sleep) - на земле (вкл экран)
-    сон (deep sleep) - отключать экран, ждать нажатия кнопки или начала подъёма, повышенный интервал пробуждения
-    выкл питания - как на данный момент
-    переключать в активный и обратно в пассивный при начале/окончании прыга
-    переключать в активный и обратно в пассивный при начале/окончании записи трека
-    переходить в сон при неактивности кнопок и длительном нахождении на земле
-    выполнятор паузы в цикле в зависимости от режима
-    для режима сон - проверять текущее изменение высоты - при постоянном подъёме или достижении 100 м - переходить в "пассивный"
-    при выходе из "сна" в "пассивный" - сразу же обновлять экран без ожидания инициализации жпс и высотомера и без логотипа
-    при выходе из режима "выкл" - прорисовывать лого, пока инициализируется жпс и высотомер
-    запоминать режим питания на gps при режимах "выкл" и "сон"

- при синхронизации отключать bitsync у часов (освободить пин-12)
вне вифи-синхронизации отключать adc (adc power off)
на время старта вифи отключать ватчдог по питанию
при входе в меню "wifi sync" - сначала перерисовывать меню, а потом делать листинг, чтобы не было эффекта подвисания после нажатия
калибровка значения напряжения на батарее
при напряжении на батарее ниже N не включать высотник, а моргать батареей и выключаться
