@@ -59,6 +59,8 @@ hw (плата)
     нужен конденсатор в цепь контроля напряжения аккумулятора
     посад место под электролит на цепь 3.3в
     диод в цепь между cp2102 и общим 3v3
+    
+    ? питание через HT7833 (сравнить с текущим)
 
 _________________________________________________________________________________________
 =========================================================================================
@@ -79,7 +81,7 @@ version 0.4.1 (xx.xx.2021)
 -    запоминать режим питания на gps при режимах "выкл" и "сон"
 
 - при синхронизации отключать bitsync у часов (освободить пин-12)
-вне вифи-синхронизации отключать adc (adc power off)
+- вне вифи-синхронизации и в sleep/pwroff режимах отключать adc (adc power off)
 на время старта вифи отключать ватчдог по питанию
 при входе в меню "wifi sync" - сначала перерисовывать меню, а потом делать листинг, чтобы не было эффекта подвисания после нажатия
 калибровка значения напряжения на батарее
